assets/styles/components/_comments.scss
.comment-list {
  @extend .list-unstyled;
}
ol.comment-list {
  list-style: none;
  margin-bottom: 0;
}
.comment-form p {
  @extend .form-group;
}
.comment-form input[type="text"],
.comment-form input[type="email"],
.comment-form input[type="url"],
.comment-form textarea {
  @extend .form-control;
}
.comment-form input[type="submit"] {
  @extend .btn;
  @extend .btn-secondary;
}


.suggestion,
.suggestion-inner {
	height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
	padding-left: 0;
	padding-right: 0;

	@include media-breakpoint-up(sm) {
		padding-left: 5%;
		padding-right: 5%;
	}
}

.suggestion-inner {
	transition: opacity $transition-time ease-in-out;
	transition-delay: $transition-time;
	opacity: 0;
	position: relative;

	.slick-active & {
		opacity: 1;
	}
}

.suggestion-text {
	padding: 100px 0 50px;
	font-size: 9vw;
	color: $purple;
	font-weight: 300;
	font-family: $font-family-sans-serif-alt;

	@include media-breakpoint-up(sm) {
		font-size: 8vw;		
		padding: 150px 20px 100px;
	}

	@include media-breakpoint-up(md) {
		font-size: 7vw;
		padding: 150px 40px 100px;
	}

	@include media-breakpoint-up(lg) {
		font-size: 6vw;
	}

	@include media-breakpoint-up(xl) {
		font-size: 5.5vw;
	}
}

.suggestion-moderation {
	margin-top: 20px;
	margin-bottom: 20px;
}

// On inner pages, when the page loads, transition

.suggestion-text {
	transition: transform $transition-time ease-in-out, opacity $transition-time ease-in-out;
	transition-delay: 0.5s;
	opacity: 0;
	transform: translate3d(0,10px,0);
	position: relative;

	.page-ready & {
		opacity: 1;
		transform: translate3d(0,0,0);
	}
}


.added-by {
	display: block;
	text-transform: uppercase;
	font-size: 10px;
    letter-spacing: 1px;
    margin-bottom: 10px;
    color: lighten($body-color, 30%);
}

.suggestion-awaiting-moderation {
	padding: 3px 15px;
    background-color: rgba(0,0,0,.05);
    border-radius: 30px;
    line-height: 20px;
}

.suggestion-contributor-wrap {
	display: none; // hide on smaller screens
	
	@include media-breakpoint-up(lg) {
		display: block;
		font-family: $font-family-sans-serif;
		font-size: 13px;
		color: lighten($body-color, 20%);
		font-weight: 400;
		position: absolute;
		bottom: 40px;

		// Animated border
		&::before {
			transition: left $transition-time ease-in-out, width $transition-time ease-in-out;
			transition-delay: $transition-time * 3;
			content: "";
			position: absolute;
			border-top: 2px solid $brand-primary;
			width: 0;
			height: 0;
			top: -20px;
			left: 100%;

			.slick-active &,
			.page-ready.page-template-template-custom &,
			.page-template-template-thank-you & {
				width: 30%;
				left: 33.33%;
			}	
		}

		.slick-active &,
		.page-ready.page-template-template-custom & {
			opacity: 1;
			transform: translate3d(0,0,0);
		}
	}

	img {
		display: inline-block;
		border-radius: 100%;
		overflow: hidden;
	}
}

// Animate in individual things
.suggestion-contributor,
.suggestion-link {
	transition: transform $transition-time ease-in-out, opacity $transition-time ease-in-out;
	opacity: 0;
	transform: scale(1.2);
	display: block;
	padding-bottom: 2px;

	.slick-active &,
	.page-ready.page-template-template-custom &,
	.page-template-template-thank-you & {
		opacity: 1;
		transform: scale(1);
	}
}

// Staggered delay
.suggestion-contributor {
	transition-delay: $transition-time * 4;
}


.suggestion-link {
	transition-delay: $transition-time * 4.5;
}




.suggestion-contributor-wrap .avatar,
.suggestion-contributor-wrap .fa {
	margin-right: 5px;
	position: relative;
	top: -1px;
	color: $purple;
}

.suggestion-contributor-wrap .avatar {
	top: -2px;
	margin-right: 2px;
}


.cld-like-wrap,
.cld-dislike-wrap {
	transition: opacity $transition-time ease-in-out, transform $transition-time ease-in-out;
	opacity: 0;
	transform: translate(0, 10px);

	.slick-active & {
		opacity: 1;
		transform: translate(0, 0);
	}
}

// Stagger delays
.cld-like-wrap {
	transition-delay: $transition-time + 0.2;
}

.cld-dislike-wrap {
	transition-delay: $transition-time + 0.3;
}

.cld-like-dislike-wrap .cld-common-wrap {
	position: relative;
	min-width: 30px;
	text-align: center;
	margin: 0 5px;

	@include media-breakpoint-up(md) {
		margin: 0 10px;
	}
}

.cld-like-dislike-trigger {
	position: relative;
	display: inline-block;
	width: 30px;
	height: 30px;
	text-align: center;
	line-height: 30px;
	border-radius: 100%;

	&::before,
	&.cld-prevent:hover::before {
		transition: transform $transition-time ease-in-out;
		content: "";
		transform: scale(0);
		border-radius: 100%;
		width: 30px;
		height: 30px;
		background-color: $white;
		position: absolute;
		z-index: -1;
	}

	&:hover::before {
		transform: scale(1);
	}
}

.cld-like-dislike-trigger i {
	width: 30px;
	height: 30px;
	line-height: 30px;
	text-align: center;

	&::before {
		z-index: 3;
	}
}


.cld-like-dislike-wrap {
	font-size: 20px;
	position: absolute;
	bottom: 0;
	left: 50%;
	width: 100px;
	margin-left: -50px;
	
	@include media-breakpoint-up(md) {
		bottom: 40px;
		width: 150px; 
		margin-left: -75px;
	}
}

.cld-prevent,
.cld-prevent:hover {
	color: lighten($body-color, 40%);
	cursor: not-allowed;
}

.cld-count-wrap {
	color: $gray-light;
	font-size: 12px;
	position: absolute;
	left: 50%;
	width: 20px;
	border-radius: 100%;
	font-weight: 700;
	margin-left: -10px;
	text-align: center;
	bottom: -19px;
}

